# demo-realtime-agents

backend/: .env.EXAMPLE  pyproject.toml
backend/.claude/: current_task.md
backend/examples/: agent_client.ipynb
backend/src/: demo.ipynb  main.py
backend/src/config/: __init__.py
backend/src/events/: __init__.py
backend/src/handlers/: __init__.py  buttons.py  connections.py
backend/src/tic_tac_toe/: __init__.py  agent.py  errors.py  game.py  handler.py  manager.py  models.py
backend/src/utils/: message_accumulator.py
backend/tests/fixtures/: message_stream_01.py
backend/tests/unit/: test_game_logic.py
frontend/: .env.EXAMPLE  README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/tic_tac_toe/: board.tsx  event_handlers.ts  game_chat.tsx
frontend/src/context/: socket-provider.tsx
frontend/src/context/socket/: README.md  config.ts  index.tsx  provider.tsx  types.ts
frontend/src/context/socket/handlers/: connection.ts  events.ts
frontend/src/context/sockets/: handle_connection.tsx
frontend/src/pages/: About.tsx  Facts.tsx  Home.tsx  Ping.tsx  Sandbox.tsx  TicTacToe.tsx
